# eliza

./: 1966_01_CACM_article_doctor_script.eliza  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  main.rs
